--- a/test.html
+++ b/test.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Minion - Test Page</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <h1>The Minion Test Page</h1>
